<resources>
    <string name="app_name">App convertor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">User Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_labels">menu_lables\n</string>
    <string name="client_id">737657216502-d9r9n3a5ilg4qesujeqofbc288tv3t13.apps.googleusercontent.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="singin">Sign in?</string>
    <string name="forgt_pssword"></string>
    <string name="goagle">Sign With Goagle</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome Back</string>
    <string name="create_account">Create Your Account</string>
    <string name="singup">Sing Up</string>
    <string name="reset_title">Enter Your Email To Send You Link To Reset Your Password </string>
    <string name="snd_reset_link">Send Reset Link</string>
    <string name="cancel">Cancel</string>
    <string name="enter_email">Enter your email"></string>
    <string name="home">Home\n</string>
    <string name="rewards">Rewards\n</string>
    <string name="convert">Convert</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="status">Check your app status</string>
    <string name="create_app">Generate Your App</string>
    <string name="support">Support</string>
    <string name="theme">Theme</string>
    <string name="logout">Logout</string>
    <string name="nav_open">open\n</string>
    <string name="nav_close">close\n</string>
    <string name="fill_your_details">Enter Your Details\n</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth (DD/MM/YYYY)</string>
    <string name="upload">Upload</string>
    <string name="submit">Submit</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="com_app">com.app.</string>
    <string name="upload_your_icon">Upload Your Icon</string>
    <string name="app_convertor">App Convertor</string>
    <string name="enter_app_name">Enter App Name</string>
    <string name="package_name">Package Name</string>
    <string name="web_url">Enter Web URL</string>
    <string name="watch_ad">Watch Ads to Reward 10 Points</string>
    <string name="get_free_app">Get Free App</string>
    <string name="convert_your_app">Convert Your App to Web by Watching Ads!</string>
    <string name="pending">Pending(APK)</string>
    <string name="processing">Processing(APK)</string>
    <string name="completed">Completed(APK)</string>
    <string name="get_abb">Get Bundle</string>
    <string name="archived">Processing(Bundle)</string>
    <string name="in_progress">Completed(Bundle)</string>
    <string name="support_deploy">Support(Deploy to Playstore)</string>
    <string name="found_error">Found Error</string>
    <string name="generate_app">Generate App</string>
    <string name="contact_support_via_whatsapp">Contact Support via WhatsApp</string>
    <string name="need_help">Need help? Contact us anytime!</string>
    <string name="learn_more">Learn More</string>
    <string name="app_icon">app_icone\n</string>
    <string name="app_status">App Name</string>
    <string name="app_staus_package">com.example.app</string>
    <string name="no_pending_apps">No Pending APK</string>
    <string name="no_processing_apk">No Processing APK</string>
    <string name="no_complete_apk">No Completed APK</string>
    <string name="no_processing_bundle">No Processing Bundle</string>
    <string name="no_complete_bundle">No Complete Bundle</string>
    <string name="no_deploy_playstore">No App To Deploye</string>
    <string name="user_profile">User Profile</string>
    <string name="name">Name</string>
    <string name="user_name">John Doe</string>
    <string name="phone">Phone</string>
    <string name="term_of_use">Term Of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App\n</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Setting\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="instruction">Remove</string>
    <string name="get_start">Get Start</string>
    <string name="share">Share With Friends</string>
    <string name="shr">Share</string>
    <string name="share_des">App invite link will be share with your friend. Thanks for like our app. Are your sure?</string>
    <string name="moreapp">More App</string>
    <string name="moreapp_des">You will be redirect to our play store account.\n Are your sure?</string>
    <string name="redirect">Redirect</string>
    <string name="feedback_des">You will be redirect to our play store account.\n Are you sure?</string>
    <string name="files">Files</string>
    <string name="share_app_message">You will be redirected to our Play Store account.\n Are you sure?</string>
    <string name="developer_account_link" translatable="false">3DevTech</string>
    <string name="policy_url" translatable="false">https://sites.google.com/view/3devtechprivacypolicy</string>
    <string name="rate_us_title">Rate Us</string>
    <string name="rate_us_message">Please give your feedback about the application. We will consider your point of view at serious note.</string>
    <string name="more_app">More Apps</string>
    <string name="privacypolicy_Des">You will be redirected to the browser to open the privacy policy. Are you sure?</string>
    <string name="get_bundle">Get Bundle</string>
    <string name="deploye">Deploye</string>
    <string name="contact_support">Contact Support</string>
    <string name="error_field_require">Field is required</string>
    <string name="or">OR</string>
    <string name="signwithgoagle">Sign up With Google</string>
    <string name="google_icon">google_icone</string>
    <string name="login_with_goagle">Login With Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Create new account? Sign Up</string>
    <string name="country">Enter your Country name</string>


</resources>