<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Sign in with Google Button -->


    <!-- Container for Email and Password -->
    <LinearLayout
        android:id="@+id/login_container"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <!-- Email EditText -->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/_20sdp"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_edit_text"
            android:padding="12dp" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edit_text"
            android:padding="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/_5sdp"/>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textSize="9sp" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google_signin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="#518EF8"
            android:fontFamily="@font/poppin_regular"
            app:cornerRadius="@dimen/_15sdp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <LinearLayout
            android:id="@+id/links_container"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/login_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sign_in_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_container">

        <!-- OR Text -->
        <TextView
            android:id="@+id/or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/or"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppin_regular"
            android:gravity="center" />

        <!-- Google Sign-In CardView -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sing_up_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <!-- Google Icon -->
                <ImageView
                    android:id="@+id/iv_google_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:src="@drawable/goagle_icone"
                    android:contentDescription="@string/google_icon" />

                <!-- Google Sign-In Text -->
                <TextView
                    android:id="@+id/tv_google_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/iv_google_icon"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:text="@string/login_with_goagle"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppin_regular" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/blue"
            android:textSize="15sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
