<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ProfileActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/poppin_regular"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- User Name Label -->
    <TextView
        android:id="@+id/user_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginStart="16dp" />

    <!-- User Name Underline and Value -->
    <TextView
        android:id="@+id/user_name_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name_label"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/underline" />

    <!-- Phone Number Label -->
    <TextView
        android:id="@+id/phone_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="18sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name_value"
        android:layout_marginStart="16dp" />

    <!-- Phone Number Underline and Value -->
    <TextView
        android:id="@+id/phone_number_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="+1 123-456-7890"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_label"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/underline" />

    <!-- Date of Birth Label -->
    <TextView
        android:id="@+id/date_of_birth_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:textSize="18sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_value"
        android:layout_marginStart="16dp" />

    <!-- Date of Birth Underline and Value -->
    <TextView
        android:id="@+id/date_of_birth_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="January 1, 1990"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_of_birth_label"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/underline" />

</androidx.constraintlayout.widget.ConstraintLayout>
