<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp">

        <!-- Inner ConstraintLayout for Content -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- App Icon -->
            <ImageView
                android:id="@+id/iv_appicone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logout_icone"
                android:contentDescription="@string/app_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- App Name -->
            <TextView
                android:id="@+id/appName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_status"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/iv_appicone"
                app:layout_constraintTop_toTopOf="@id/iv_appicone"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Package Name -->
            <TextView
                android:id="@+id/tv_status_package"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_staus_package"
                android:textSize="12sp"
                android:textColor="#666666"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@id/iv_appicone"
                app:layout_constraintTop_toBottomOf="@id/appName"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Time Left -->
            <TextView
                android:id="@+id/tvTimeLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Time Left"
                android:textSize="12sp"
                android:textColor="#FF0000"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@id/iv_appicone"
                app:layout_constraintTop_toBottomOf="@id/tv_status_package"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
